--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&amp;family=Rubik:wght@400;500;600;700&amp;family=Shadows+Into+Light&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/scss/bootstrap-grid.css">
     <link rel="stylesheet" href="/assets/css/main.min.css">
   </head>
@@ -28,7 +31,7 @@
             </div>
             <div class="header__btn-group">
               <div class="search-btn" arial-lebel="Search" data-search-btn=""><i class="icon__search ri-search-line">     </i></div>
-              <div class="btn btn-hover"> <span>Reservation   </span></div>
+              <div class="btn btn--header"><span>Reservation   </span></div>
               <div class="nav-toggle-btn" arial-lebel="Toggle Menu" data-menu-toggle-btn=""> <span class="line top"> </span><span class="line middle">   </span><span class="line bottom">    </span></div>
             </div>
           </div>
@@ -50,6 +53,23 @@
       </div>
     </div>
     <!--CONTENT-->
+    <!--Hero Section-->
+    <div class="hero">  
+      <div class="container"> 
+        <div class="row"> 
+          <div class="col-12 col-lg-12">
+            <div class="hero__content"> 
+              <div class="hero__text"> 
+                <h3 class="hero__subtitle">Eat Sleep And</h3>
+                <h1 class="hero__title">Supper delicious Burger in town!</h1>
+                <p class="hero__p">Food is any substance consumed to provide nutritional support for an organism.</p>
+                <div class="btn btn--hero"> <span>book a table</span></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--FOOTER-->
     <script src="/assets/js/main.min.js"></script>
   </body>
