--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <p class="hero__p">Food is any substance consumed to provide nutritional support for an organism.</p>
                 <div class="btn btn--hero"> <span>book a table</span></div>
               </div>
+              <div class="hero__banner"><img src="assets/img/hero-banner.png" alt="Burger"></div>
             </div>
           </div>
         </div>
