--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
                 <p class="hero__p">Food is any substance consumed to provide nutritional support for an organism.</p>
                 <div class="btn btn--hero"> <span>book a table</span></div>
               </div>
-              <div class="hero__banner"><img src="assets/img/hero-banner.png" alt="Burger"></div>
+              <div class="hero__banner">
+                <div class="banner__bg">  <img src="assets/img/hero-banner-bg.png" alt="Burger"></div>
+                <div class="banner__img"> <img src="assets/img/hero-banner.png" alt="Burger"></div>
+              </div>
             </div>
           </div>
         </div>
