repair img adress

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&amp;family=Rubik:wght@400;500;600;700&amp;family=Shadows+Into+Light&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/scss/bootstrap-grid.css">
-    <link rel="stylesheet" href="/assets/css/main.min.css">
+    <link rel="stylesheet" href="src/scss/bootstrap-grid.css">
+    <link rel="stylesheet" href="assets/css/main.min.css">
   </head>
   <body>
     <!--HEADER-->
@@ -107,6 +107,6 @@
       </div>
     </div>
     <!--FOOTER-->
-    <script src="/assets/js/main.min.js"></script>
+    <script src="assets/js/main.min.js"></script>
   </body>
 </html>
