next section finish

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <div class="menu__list">
                 <div class="menu__item"> <a href="#home" data-nav-link="">Home</a></div>
                 <div class="menu__item"> <a href="#about" data-nav-link="">About Us</a></div>
-                <div class="menu__item"> <a href="$food-menu" data-nav-link="">Food Menu</a></div>
+                <div class="menu__item"> <a href="$food-menu" data-nav-link="">Shop</a></div>
                 <div class="menu__item"> <a href="#blog" data-nav-link="">Blog</a></div>
                 <div class="menu__item"> <a href="#" data-nav-link="">Contact Us    </a></div>
               </div>
@@ -183,21 +183,21 @@
               </div>
               <div class="about__text">
                 <div class="section__text-wrapper"> 
-                  <h1 class="text-wrapper__title"> Caferio, Burgers, and Best Pizzas </h1><span>in Town!</span>
-                  <p class="text-wrapper__p">The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during the Jurchen invasion of the 1120s, while it is also known that many restaurants were run by families.</p>
+                  <h1 class="section__text-wrapper__title">Caferio, Burgers, and Best Pizzas <span>in Town!</span></h1>
+                  <p class="section__text-wrapper__p">The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during the Jurchen invasion of the 1120s, while it is also known that many restaurants were run by families.</p>
                 </div>
                 <ul class="about__table"> 
-                  <li class="table__item"> <i class="ri-check-fill"> </i>
+                  <li class="about__item"> <i class="ri-check-fill"> </i>
+                    <p>Delicious & Healthy Foods</p>
+                  </li>
+                  <li class="about__item"> <i class="ri-check-fill"> </i>
                     <p>Spacific Family And Kids Zone</p>
                   </li>
-                  <li class="table__item"> <i class="ri-check-fill"> </i>
-                    <p>Music & Other Facilities   </p>
+                  <li class="about__item"> <i class="ri-check-fill"></i>
+                    <p> Music & Other Facilities</p>
                   </li>
-                  <li class="table__item"> <i class="ri-check-fill"></i>
-                    <p> Fastest Food Home Delivery</p>
-                  </li>
-                  <li class="table__item"> <i class="ri-check-fill"> </i>
-                    <p>Order Now   </p>
+                  <li class="about__item"> <i class="ri-check-fill"> </i>
+                    <p>Fastest Food Home Delivery </p>
                   </li>
                 </ul>
                 <div class="btn btn--header"><span>Order Now           </span></div>
