dishes section finish

--- a/index.html
+++ b/index.html
@@ -207,6 +207,145 @@
         </div>
       </div>
     </div>
+    <!--Dishes Section-->
+    <div class="dishes"> 
+      <div class="container"> 
+        <div class="row"> 
+          <div class="col-12 col-lg-12"> 
+            <div class="dishes__content">
+              <div class="section__text-wrapper"> 
+                <h3 class="section__text-wrapper__subtitle">Popular Dishes</h3>
+                <h1 class="section__text-wrapper__title">Our Delicious<span>Foods</span></h1>
+                <p class="section__text-wrapper__p">Food is any substance consumed to provide nutritional support for an organism.</p>
+              </div>
+              <div class="dishes__buttons"> 
+                <div class="btn btn--dishes active"> <span>All        </span></div>
+                <div class="btn btn--dishes"> <span>Pizza     </span></div>
+                <div class="btn btn--dishes"> <span>Burger    </span></div>
+                <div class="btn btn--dishes"> <span>Drinks  </span></div>
+                <div class="btn btn--dishes"> <span>Sandwitch </span></div>
+              </div>
+              <div class="dishes__wrapper">        
+                <div class="dishes__card">  
+                  <div class="card__banner">  
+                    <div class="card__img"> <img src="assets/img/food-menu-1.png" alt="Burger with Drinks"></div>
+                    <div class="card__discount">-15%   </div>
+                    <div class="btn btn--menu"><span>Order Now </span></div>
+                  </div>
+                  <div class="card__wrapper"> 
+                    <div class="wrapper__box-reating">
+                      <h4 class="wrapper__name">Chicken</h4>
+                      <div class="wrapper__rating"> <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+                    </div>
+                    <h2 class="wrapper__title">Fried Chicken Unlimited    </h2>
+                    <div class="wrapper__price"> 
+                      <div class="price__title">PRICE:</div>
+                      <div class="price__present">$49.00</div>
+                      <div class="price__out">$69.00</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="dishes__card">  
+                  <div class="card__banner">  
+                    <div class="card__img"> <img src="assets/img/food-menu-2.png" alt="Burger with Drinks"></div>
+                    <div class="card__discount">-10%   </div>
+                    <div class="btn btn--menu"><span>Order Now </span></div>
+                  </div>
+                  <div class="card__wrapper"> 
+                    <div class="wrapper__box-reating">
+                      <h4 class="wrapper__name">Noddles</h4>
+                      <div class="wrapper__rating"> <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+                    </div>
+                    <h2 class="wrapper__title">Burger King Whopper    </h2>
+                    <div class="wrapper__price"> 
+                      <div class="price__title">PRICE:</div>
+                      <div class="price__present">$49.00</div>
+                      <div class="price__out">$69.00</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="dishes__card">  
+                  <div class="card__banner">  
+                    <div class="card__img"> <img src="assets/img/food-menu-3.png" alt="Burger with Drinks"></div>
+                    <div class="card__discount">-25%   </div>
+                    <div class="btn btn--menu"><span>Order Now </span></div>
+                  </div>
+                  <div class="card__wrapper"> 
+                    <div class="wrapper__box-reating">
+                      <h4 class="wrapper__name">Pizzas</h4>
+                      <div class="wrapper__rating"> <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+                    </div>
+                    <h2 class="wrapper__title">White Castle Pizzas    </h2>
+                    <div class="wrapper__price"> 
+                      <div class="price__title">PRICE:</div>
+                      <div class="price__present">$49.00</div>
+                      <div class="price__out">$69.00</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="dishes__card">  
+                  <div class="card__banner">  
+                    <div class="card__img"> <img src="assets/img/food-menu-4.png" alt="Burger with Drinks"></div>
+                    <div class="card__discount">-15%   </div>
+                    <div class="btn btn--menu"><span>Order Now </span></div>
+                  </div>
+                  <div class="card__wrapper"> 
+                    <div class="wrapper__box-reating">
+                      <h4 class="wrapper__name">Burrito</h4>
+                      <div class="wrapper__rating"> <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+                    </div>
+                    <h2 class="wrapper__title">Bell Burrito Supreme    </h2>
+                    <div class="wrapper__price"> 
+                      <div class="price__title">PRICE:</div>
+                      <div class="price__present">$49.00</div>
+                      <div class="price__out">$69.00</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="dishes__card">  
+                  <div class="card__banner">  
+                    <div class="card__img"> <img src="assets/img/food-menu-5.png" alt="Burger with Drinks"></div>
+                    <div class="card__discount">-15%   </div>
+                    <div class="btn btn--menu"><span>Order Now </span></div>
+                  </div>
+                  <div class="card__wrapper"> 
+                    <div class="wrapper__box-reating">
+                      <h4 class="wrapper__name">Nuggets</h4>
+                      <div class="wrapper__rating"> <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+                    </div>
+                    <h2 class="wrapper__title">Kung Pao Chicken BBQ    </h2>
+                    <div class="wrapper__price"> 
+                      <div class="price__title">PRICE:</div>
+                      <div class="price__present">$49.00</div>
+                      <div class="price__out">$69.00</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="dishes__card">  
+                  <div class="card__banner">  
+                    <div class="card__img"> <img src="assets/img/food-menu-6.png" alt="Burger with Drinks"></div>
+                    <div class="card__discount">-15%   </div>
+                    <div class="btn btn--menu"><span>Order Now </span></div>
+                  </div>
+                  <div class="card__wrapper"> 
+                    <div class="wrapper__box-reating">
+                      <h4 class="wrapper__name">Chicken</h4>
+                      <div class="wrapper__rating"> <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+                    </div>
+                    <h2 class="wrapper__title">Wendy's Chicken    </h2>
+                    <div class="wrapper__price"> 
+                      <div class="price__title">PRICE:</div>
+                      <div class="price__present">$49.00</div>
+                      <div class="price__out">$69.00</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--FOOTER-->
     <script src="assets/js/main.min.js"></script>
   </body>
