--- a/index.html
+++ b/index.html
@@ -346,6 +346,26 @@
         </div>
       </div>
     </div>
+    <!--Section CTA-->
+    <div class="cta">
+      <div class="container"> 
+        <div class="row"> 
+          <div class="col-12 col-lg-12"> 
+            <div class="cta__content">  
+              <div class="section__text-wrapper"> 
+                <h1 class="section__text-wrapper__title">The Foodie Have Excellent Of<span>Quality Burgers!</span></h1>
+                <p class="section__text-wrapper__p">The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during the Jurchen invasion of the 1120s, while it is also known that many restaurants were run by families.</p>
+                <div class="btn btn--header"><span>Order Now     </span></div>
+              </div>
+              <div class="cta__banner"> 
+                <div class="cta__img">  <img src="assets/img/cta-banner.png" alt="Burger with Drinks"></div>
+                <div class="cta__wrapper"> <img class="scale-up-anim abs-img" src="assets/img/sale-shape.png" alt="get up to 50% off now"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--FOOTER-->
     <script src="assets/js/main.min.js"></script>
   </body>
