delivery section finish

--- a/index.html
+++ b/index.html
@@ -366,6 +366,26 @@
         </div>
       </div>
     </div>
+    <!--Delivery Section-->
+    <div class="delivery"> 
+      <div class="container"> 
+        <div class="row"> 
+          <div class="col-12 col-lg-12"> 
+            <div class="delivery__content"> 
+              <div class="section__text-wrapper"> 
+                <h1 class="section__text-wrapper__title">A Moments Of Delivered On <span>Right Time </span>&amp; Place</h1>
+                <p class="section__text-wrapper__p">The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during the Jurchen invasion of the 1120s, while it is also known that many restaurants were run by families.</p>
+                <div class="btn btn--header"><span>Order Now  </span></div>
+              </div>
+              <div class="delivery__banner"> 
+                <div class="delivery__bg"><img src="assets/img/delivery-banner-bg.png" alt=""></div>
+                <div class="delivery__img">  <img src="assets/img/delivery-boy.svg" alt="Burger with Drinks" data-delivery-boy=""></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--FOOTER-->
     <script src="assets/js/main.min.js"></script>
   </body>
