customers section finish

--- a/index.html
+++ b/index.html
@@ -386,6 +386,57 @@
         </div>
       </div>
     </div>
+    <!--Seccion Customers-->
+    <div class="customers"> 
+      <div class="container"> 
+        <div class="row"> 
+          <div class="col-12 col-lg-12"> 
+            <div class="customers__content">
+              <div class="section__text-wrapper"> 
+                <h3 class="section__text-wrapper__subtitle">Popular Dishes</h3>
+                <h1 class="section__text-wrapper__title">Our Delicious<span>Foods</span></h1>
+                <p class="section__text-wrapper__p">Food is any substance consumed to provide nutritional support for an organism.</p>
+              </div>
+              <div class="customers__wrapper has-scrollbar"> 
+                <div class="customers__box"> 
+                  <div class="box__header"> 
+                    <div class="box__image"> <img src="assets/img/avatar-1.jpg" alt=""></div>
+                    <div class="box__text"> 
+                      <h3 class="box__title">Robert William  </h3>
+                      <h4 class="box__subtitle">CEO Kingfisher </h4>
+                    </div>
+                  </div>
+                  <p class="box__p">I would be lost without restaurant. I would like to personally thank you for your outstanding product."</p>
+                  <div class="wrapper__rating"> <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+                </div>
+                <div class="customers__box"> 
+                  <div class="box__header"> 
+                    <div class="box__image"> <img src="assets/img/avatar-2.jpg" alt=""></div>
+                    <div class="box__text"> 
+                      <h3 class="box__title">Robert William  </h3>
+                      <h4 class="box__subtitle">CEO Kingfisher </h4>
+                    </div>
+                  </div>
+                  <p class="box__p">I would be lost without restaurant. I would like to personally thank you for your outstanding product."</p>
+                  <div class="wrapper__rating"> <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+                </div>
+                <div class="customers__box"> 
+                  <div class="box__header"> 
+                    <div class="box__image"> <img src="assets/img/avatar-3.jpg" alt=""></div>
+                    <div class="box__text"> 
+                      <h3 class="box__title">Robert William  </h3>
+                      <h4 class="box__subtitle">CEO Kingfisher </h4>
+                    </div>
+                  </div>
+                  <p class="box__p">I would be lost without restaurant. I would like to personally thank you for your outstanding product."</p>
+                  <div class="wrapper__rating"> <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--FOOTER-->
     <script src="assets/js/main.min.js"></script>
   </body>
