--- a/index.html
+++ b/index.html
@@ -437,6 +437,51 @@
         </div>
       </div>
     </div>
+    <!--Section Gallery-->
+    <div class="gallery"> 
+      <div class="container"> 
+        <div class="row">   
+          <div class="col-12 col-lg-12"> 
+            <div class="gallery__content"> 
+              <ul class="gallery__banner">
+                <li class="banner-lg"> 
+                  <div class="banner__wrapper">
+                    <div class="banner__img"> <img src="assets/img/banner-1.jpg" alt=""></div>
+                    <h2 class="banner__title">Discount For Delicious Tasty Burgers!50% Off Now! Discount For Delicious Tasty Burgers!       </h2>
+                    <p class="banner__text">Sale off 50% only this week</p>
+                    <div class="btn btn--gallery"><span>order now</span></div>
+                  </div>
+                </li>
+                <li class="banner-sm"> 
+                  <div class="banner__wrapper">
+                    <div class="banner__img"> <img src="assets/img/banner-2.jpg" alt=""></div>
+                    <h2 class="banner__title">Delicious Pizza    </h2>
+                    <p class="banner__text">50% off Now</p>
+                    <div class="btn btn--gallery"><span>order now</span></div>
+                  </div>
+                </li>
+                <li class="banner-sm"> 
+                  <div class="banner__wrapper">
+                    <div class="banner__img"> <img src="assets/img/banner-3.jpg" alt=""></div>
+                    <h2 class="banner__title">American Burgers     </h2>
+                    <p class="banner__text">50% off Now</p>
+                    <div class="btn btn--gallery"><span>order now</span></div>
+                  </div>
+                </li>
+                <li class="banner-md">
+                  <div class="banner__wrapper">
+                    <div class="banner__img"> <img src="assets/img/banner-4.jpg" alt=""></div>
+                    <h2 class="banner__title">Tasty Buzzed Pizza       </h2>
+                    <p class="banner__text">Sale off 50% only this week</p>
+                    <div class="btn btn--gallery"><span>order now                               </span></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--FOOTER-->
     <script src="assets/js/main.min.js"></script>
   </body>
