--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
           <div class="col-12 col-lg-12"> 
             <div class="customers__content">
               <div class="section__text-wrapper"> 
-                <h3 class="section__text-wrapper__subtitle">Popular Dishes</h3>
-                <h1 class="section__text-wrapper__title">Our Delicious<span>Foods</span></h1>
+                <h3 class="section__text-wrapper__subtitle">Testimonials</h3>
+                <h1 class="section__text-wrapper__title">Our Customers <span>Reviews</span></h1>
                 <p class="section__text-wrapper__p">Food is any substance consumed to provide nutritional support for an organism.</p>
               </div>
               <div class="customers__wrapper has-scrollbar"> 
@@ -447,36 +447,63 @@
                 <li class="banner-lg"> 
                   <div class="banner__wrapper">
                     <div class="banner__img"> <img src="assets/img/banner-1.jpg" alt=""></div>
-                    <h2 class="banner__title">Discount For Delicious Tasty Burgers!50% Off Now! Discount For Delicious Tasty Burgers!       </h2>
-                    <p class="banner__text">Sale off 50% only this week</p>
-                    <div class="btn btn--gallery"><span>order now</span></div>
+                    <div class="banner__content">   
+                      <h2 class="banner__title"> 
+                        <p>50% Off Now!</p>
+                        <p>Discount For Delicious Tasty Burgers!       </p>
+                      </h2>
+                      <p class="banner__text">Sale off 50% only this week</p>
+                      <div class="btn btn--gallery"><span>order now</span></div>
+                    </div>
                   </div>
                 </li>
                 <li class="banner-sm"> 
                   <div class="banner__wrapper">
                     <div class="banner__img"> <img src="assets/img/banner-2.jpg" alt=""></div>
-                    <h2 class="banner__title">Delicious Pizza    </h2>
-                    <p class="banner__text">50% off Now</p>
-                    <div class="btn btn--gallery"><span>order now</span></div>
+                    <div class="banner__content">   
+                      <h2 class="banner__title">Delicious Pizza    </h2>
+                      <p class="banner__text">50% off Now</p>
+                      <div class="btn btn--gallery"><span>order now</span></div>
+                    </div>
                   </div>
                 </li>
                 <li class="banner-sm"> 
                   <div class="banner__wrapper">
                     <div class="banner__img"> <img src="assets/img/banner-3.jpg" alt=""></div>
-                    <h2 class="banner__title">American Burgers     </h2>
-                    <p class="banner__text">50% off Now</p>
-                    <div class="btn btn--gallery"><span>order now</span></div>
+                    <div class="banner__content">       
+                      <h2 class="banner__title">American Burgers     </h2>
+                      <p class="banner__text">50% off Now</p>
+                      <div class="btn btn--gallery"><span>order now</span></div>
+                    </div>
                   </div>
                 </li>
                 <li class="banner-md">
                   <div class="banner__wrapper">
                     <div class="banner__img"> <img src="assets/img/banner-4.jpg" alt=""></div>
-                    <h2 class="banner__title">Tasty Buzzed Pizza       </h2>
-                    <p class="banner__text">Sale off 50% only this week</p>
-                    <div class="btn btn--gallery"><span>order now                               </span></div>
+                    <div class="banner__content">       
+                      <h2 class="banner__title">Tasty Buzzed Pizza       </h2>
+                      <p class="banner__text">Sale off 50% only this week</p>
+                      <div class="btn btn--gallery"><span>order now       </span></div>
+                    </div>
                   </div>
                 </li>
               </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Blog Section-->
+    <div class="blog"> 
+      <div class="container"> 
+        <div class="row">   
+          <div class="col-12 col-lg-12">
+            <div class="blog__content"> 
+              <div class="section__text-wrapper"> 
+                <h3 class="section__text-wrapper__subtitle">Testimonials</h3>
+                <h1 class="section__text-wrapper__title">Our Customers <span>Reviews</span></h1>
+                <p class="section__text-wrapper__p">Food is any substance consumed to provide nutritional support for an organism.</p>
+              </div>
             </div>
           </div>
         </div>
