--- a/index.html
+++ b/index.html
@@ -16,6 +16,45 @@
     <link rel="stylesheet" href="assets/css/main.min.css">
   </head>
   <body>
+    <!--HEADER-->
+    <header class="header" data-header="">
+      <div class="container"> 
+        <div class="row">
+          <div class="header__content">
+            <div class="header__logo"> <a href="index.html"> 
+                <div class="logo__title">Foodie </div><span>.</span></a></div>
+            <div class="menu" data-navbar="">
+              <div class="menu__list">
+                <div class="menu__item"> <a href="#home" data-nav-link="">Home</a></div>
+                <div class="menu__item"> <a href="#about" data-nav-link="">About Us</a></div>
+                <div class="menu__item"> <a href="$food-menu" data-nav-link="">Shop</a></div>
+                <div class="menu__item"> <a href="#blog" data-nav-link="">Blog</a></div>
+                <div class="menu__item"> <a href="#" data-nav-link="">Contact Us    </a></div>
+              </div>
+            </div>
+            <div class="header__btn-group">
+              <div class="search-btn" arial-lebel="Search" data-search-btn=""><i class="icon__search ri-search-line">     </i></div>
+              <div class="btn btn--header"><span>Reservation   </span></div>
+              <div class="nav-toggle-btn" arial-lebel="Toggle Menu" data-menu-toggle-btn=""> <span class="line top"> </span><span class="line middle">   </span><span class="line bottom">    </span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!--Search Box-->
+    <div class="search">
+      <div class="container"> 
+        <div class="row"> 
+          <div class="search__content" data-search-container="">
+            <div class="search__form"> 
+              <input class="search-input" type="search" name="search" aria-label="Search here" placeholder="Type keywords here...">
+              <button class="search-submit" aria-label="Submit search" data-search-submit-btn=""><i class="ri-search-line" name="search-outline"></i></button>
+            </div>
+            <button class="search-close-btn" aria-label="Cancel search" data-search-close-btn=""></button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--CONTENT-->
     <!--Hero Section-->
     <div class="hero">  
