--- a/index.html
+++ b/index.html
@@ -548,6 +548,66 @@
       </div>
     </div>
     <!--FOOTER-->
+    <!--Footer-->
+    <footer class="footer"> 
+      <div class="container"> 
+        <div class="row"> 
+          <div class="col-12 col-lg-12"> 
+            <div class="footer__content">
+              <div class="footer__wrapper"> 
+                <h2 class="wrapper__title">Foodie<span>.</span></h2>
+                <p class="wrapper__p">Financial experts support or help you to to find out which way you can raise your funds more.</p>
+                <ul class="wrapper__list-icon"> 
+                  <li class="wrapper__item"> <a href=""> <i class="ri-facebook-fill"> </i></a></li>
+                  <li class="wrapper__item"> <a href=""> <i class="ri-twitter-fill"></i></a></li>
+                  <li class="wrapper__item"> <a href=""> <i class="ri-instagram-fill"> </i></a></li>
+                  <li class="wrapper__item"> <a href=""> <i class="ri-pinterest-fill"></i></a></li>
+                </ul>
+              </div>
+              <div class="footer__wrapper"> 
+                <h3 class="wrapper__subtitle">Contact Info</h3>
+                <ul class="wrapper__list"> 
+                  <li class="wrapper__item">+1 (062) 109-9222</li>
+                  <li class="wrapper__item">Info@YourGmail24.com</li>
+                  <li class="wrapper__item">153 Williamson Plaza, Maggieberg, MT 09514</li>
+                </ul>
+              </div>
+              <div class="footer__wrapper"> 
+                <h3 class="wrapper__subtitle">Opening Hours</h3>
+                <ul class="wrapper__list"> 
+                  <li class="wrapper__item">Monday-Friday: 08:00-22:00</li>
+                  <li class="wrapper__item">Tuesday 4PM: Till Mid Night</li>
+                  <li class="wrapper__item">Saturday: 10:00-16:00    </li>
+                </ul>
+              </div>
+              <div class="footer__wrapper"> 
+                <form class="footer-form" action="">
+                  <p class="footer-list-title">Book a Table</p>
+                  <div class="input-wrapper">
+                    <input class="input-field" type="text" name="full_name" required="" placeholder="Your Name" aria-label="Your Name">
+                    <input class="input-field" type="email" name="email_address" required="" placeholder="Email" aria-label="Email">
+                  </div>
+                  <div class="input-wrapper">
+                    <select class="input-field" name="total_person" aria-label="Total person"></select>
+                    <option value="person">Person</option>
+                    <option value="2 person">2 Person</option>
+                    <option value="3 person">3 Person</option>
+                    <option value="4 person">4 Person</option>
+                    <option value="5 person">5 Person</option>
+                    <input class="input-field" type="date" name="booking_date" aria-label="Reservation date">
+                  </div>
+                  <textarea class="input-field" name="message" required="" placeholder="Message" aria-label="Message"></textarea>
+                  <button class="btn" type="submit">Book a Table</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom"> 
+        <h3 class="footer-bottom__title">The site was written to document the experience <span>Krzysztof Siek 2022</span></h3>
+      </div>
+    </footer>
     <script src="assets/js/main.min.js"></script>
   </body>
 </html>
